--- a/app/views/spotlight/exhibits/_languages.html.erb
+++ b/app/views/spotlight/exhibits/_languages.html.erb
@@ -1,9 +1,10 @@
-<div role="tabpanel" class="tab-pane" id="language">
+<div role="tabpanel" class="tab-pane <%= 'active' if @tab == 'language' %>" id="language">
   <p class="instructions"><%= t :'spotlight.exhibits.languages.selection_instructions' %></p>
 
   <%= bootstrap_form_for [current_exhibit, Spotlight::Language.new], layout: :horizontal do |f| %>
     <div class='col-md-6'>
       <%= f.select('locale', add_exhibit_language_dropdown_options, prompt: t('.selection_prompt')) %>
+      <%= hidden_field_tag :tab, 'language' %>
     </div>
     <%= f.submit nil, class: 'btn btn-primary' %>
   <% end %>
@@ -44,6 +45,7 @@
       </div>
       <div class="form-actions">
         <div class="primary-actions">
+          <%= hidden_field_tag :tab, 'language' %>
           <%= f.submit nil, class: 'btn btn-primary' %>
         </div>
       </div>
